--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,4 @@ zadachi/bin/Debug/net8.0/zadachi.dll
  zadachi/bin/Debug/net8.0/zadachi.exe
  zadachi/bin/Debug/net8.0/zadachi.runtimeconfig.json
       zadachi/zadachi.csproj
+.fake
